--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>KreskantaMono</title>
+    <title>Kreskanta Mono</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <%= render 'application/header' %>
     <%= yield %>
   </body>
 </html>
