apply bootstrap to header and exchange_infos#index

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,1 +1,3 @@
-<h1>Kreskanta Mono</h1>
+<header class="p-2 sticky-top flex-md-nowrap navbar navbar-dark bg-primary bg-gradient shadow">
+  <%= link_to 'Kreskanta Mono', root_path, class: 'navbar-brand' %>
+</header>
