--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="p-2 sticky-top flex-md-nowrap navbar navbar-dark bg-primary bg-gradient shadow">
-  <%= link_to 'Kreskanta Mono', root_path, class: 'navbar-brand' %>
+  <%= link_to 'Kreskanta Mono', user_root_path, class: 'navbar-brand' %>
 
   <% if user_signed_in? %>
     <div class="d-flex">
