--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,20 @@
-<header class="p-2 sticky-top flex-md-nowrap navbar navbar-dark bg-primary bg-gradient shadow">
+<header class="p-2 sticky-top flex-md-nowrap navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow">
   <%= link_to 'Kreskanta Mono', user_root_path, class: 'navbar-brand' %>
+
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <li class="nav-item">
+      <%= link_to 'Account Info', account_info_path, class: 'nav-link' %>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="binanceClientDropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        BinanceClient
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="binanceClientDropdownMenu">
+        <li><%= link_to 'Exchange Infos', user_root_path, class: 'dropdown-item' %></li>
+        <li><%= link_to 'Account Snapshots', account_snapshots_path, class: 'dropdown-item' %></li>
+      </ul>
+    </li>
+  </ul>
 
   <% if user_signed_in? %>
     <div class="d-flex">
