--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -5,6 +5,9 @@
     <li class="nav-item">
       <%= link_to 'Account Info', account_info_path, class: 'nav-link' %>
     </li>
+    <li class="nav-item">
+      <%= link_to 'Coins', coins_path, class: 'nav-link' %>
+    </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="binanceClientDropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         BinanceClient
