--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,12 +1,13 @@
 <header class="p-2 sticky-top flex-md-nowrap navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow">
+  <%= image_tag 'money-bag.png', height: 25, class: 'm-1' %>
   <%= link_to 'Kreskanta Mono', user_root_path, class: 'navbar-brand' %>
 
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     <li class="nav-item">
-      <%= link_to 'Account Info', account_info_path, class: 'nav-link' %>
+      <%= link_to icon('fas', 'wallet', 'Account Info', class: 'm-1'), account_info_path, class: 'nav-link' %>
     </li>
     <li class="nav-item">
-      <%= link_to 'Coins', coins_path, class: 'nav-link' %>
+      <%= link_to icon('fas', 'coins', 'Coins', class: 'm-1'), coins_path, class: 'nav-link' %>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="binanceClientDropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -23,11 +24,12 @@
     <div class="d-flex">
       <div class="dropdown">
         <button class="btn btn-outline-light dropdown-toggle" type="button" id="userDropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+          <%= icon('far', 'user-circle', class: 'm-1') %>
           <%= current_user.email %>
         </button>
         <ul class="dropdown-menu" aria-labelledby="userDropdownMenuButton">
-          <li><%= link_to 'Chaves', edit_user_path(current_user), class: 'dropdown-item' %></li>
-          <li><%= button_to 'Sair', destroy_user_session_path, method: :delete, data: { turbo: 'false' }, class: 'dropdown-item' %></li>
+          <li><%= link_to icon('fas', 'key', 'Chaves', class: 'm-1'), edit_user_path(current_user), class: 'dropdown-item' %></li>
+          <li><%= button_to icon('fas', 'sign-out-alt', 'Sair', class: 'm-1'), destroy_user_session_path, method: :delete, data: { turbo: 'false' }, class: 'dropdown-item' %></li>
         </ul>
       </div>
 
