--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,15 +1,15 @@
 <div class="container-fluid mt-3">
-  <h2>Chaves</h2>
+  <h2><%= icon('fas', 'key', 'Chaves', class: 'm-1') %></h2>
   <p class="m-0 p-0">Use o formulário abaixo para configurar as chaves necessárias para autenticação com a API.</p>
 </div>
 
 <div class="container-fluid mt-3">
   <%= simple_form_for @user, defaults: { input_html: { class: 'form-control' } } do |f| %>
-    <div class="row my-5">
-      <div class="col-md-6">
+    <div class="row">
+      <div class="col-md-6 my-3">
         <%= f.input :api_key, as: :string %>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 my-3">
         <%= f.input :api_secret_key, as: :string %>
       </div>
     </div>
