--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -2,37 +2,41 @@
   <%= image_tag 'money-bag.png', height: 25, class: 'm-1' %>
   <%= link_to 'Kreskanta Mono', user_root_path, class: 'navbar-brand' %>
 
-  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-    <li class="nav-item">
-      <%= link_to icon('fas', 'wallet', 'Account Info', class: 'm-1'), account_info_path, class: 'nav-link' %>
-    </li>
-    <li class="nav-item">
-      <%= link_to icon('fas', 'coins', 'Coins', class: 'm-1'), coins_path, class: 'nav-link' %>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="binanceClientDropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        BinanceClient
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="binanceClientDropdownMenu">
-        <li><%= link_to 'Exchange Infos', user_root_path, class: 'dropdown-item' %></li>
-        <li><%= link_to 'Account Snapshots', account_snapshots_path, class: 'dropdown-item' %></li>
-      </ul>
-    </li>
-  </ul>
-
-  <% if user_signed_in? %>
-    <div class="d-flex">
-      <div class="dropdown">
-        <button class="btn btn-outline-light dropdown-toggle" type="button" id="userDropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-          <%= icon('far', 'user-circle', class: 'm-1') %>
-          <%= current_user.email %>
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="userDropdownMenuButton">
-          <li><%= link_to icon('fas', 'key', 'Chaves', class: 'm-1'), edit_user_path(current_user), class: 'dropdown-item' %></li>
-          <li><%= button_to icon('fas', 'sign-out-alt', 'Sair', class: 'm-1'), destroy_user_session_path, method: :delete, data: { turbo: 'false' }, class: 'dropdown-item' %></li>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLinks" aria-controls="navbarLinks" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarLinks">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <%= link_to icon('fas', 'wallet', 'Account Info', class: 'm-1'), account_info_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to icon('fas', 'coins', 'Coins', class: 'm-1'), coins_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="binanceClientDropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          BinanceClient
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="binanceClientDropdownMenu">
+          <li><%= link_to 'Exchange Infos', user_root_path, class: 'dropdown-item' %></li>
+          <li><%= link_to 'Account Snapshots', account_snapshots_path, class: 'dropdown-item' %></li>
         </ul>
-      </div>
+      </li>
+    </ul>
 
-    </div>
-  <% end %>
+    <% if user_signed_in? %>
+      <div class="d-flex">
+        <div class="dropdown">
+          <button class="btn btn-outline-light dropdown-toggle" type="button" id="userDropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+            <%= icon('far', 'user-circle', class: 'm-1') %>
+            <%= current_user.email %>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="userDropdownMenuButton">
+            <li><%= link_to icon('fas', 'key', 'Chaves', class: 'm-1'), edit_user_path(current_user), class: 'dropdown-item' %></li>
+            <li><%= button_to icon('fas', 'sign-out-alt', 'Sair', class: 'm-1'), destroy_user_session_path, method: :delete, data: { turbo: 'false' }, class: 'dropdown-item' %></li>
+          </ul>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </header>
