tweak view detail

--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-3">
   <h2><%= icon('fas', 'coins', 'Coins', class: 'm-1') %></h2>
   <p class="m-0 p-0">Coins that have been created in this app's database.</p>
-  <p class="m-0 p-0 text-muted">We can put more information here.</p>
+  <p class="m-0 p-0 text-muted">lib/tasks/create_first_coins.rake</p>
 </div>
 
 <div class="container-fluid mt-3">
