--- a/app/views/coins/show.html.erb
+++ b/app/views/coins/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-3">
   <h2><%= icon('fas', 'tag', 'Prices', class: 'm-1') %></h2>
   <p class="m-0 p-0">Prices collected for <%= @coin.name %> (<%= @coin.own_symbol %>).</p>
-  <p class="m-0 p-0 text-muted">We can put more information here.</p>
+  <p class="m-0 p-0 text-muted">Automatically running every hour on the hour.</p>
 </div>
 
 <div class="container-fluid mt-3">
