--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -8,6 +8,9 @@
   <div class="collapse navbar-collapse" id="navbarLinks">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
+        <%= link_to icon('fab', 'bitcoin', 'Prices', class: 'm-1'), coin_path(@bitcoin), class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
         <%= link_to icon('fas', 'wallet', 'Account Info', class: 'm-1'), account_info_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
