--- a/app/views/exchange_infos/index.html.erb
+++ b/app/views/exchange_infos/index.html.erb
@@ -1,81 +1,97 @@
 <div class="container-fluid mt-3">
   <h2>Exchange Information</h2>
-  <p class="m-0 p-0">Current exchange trading rules and symbol information</p>
+  <p class="m-0 p-0">BinanceClient.exchange_info('BTCUSDT')</p>
   <p class="m-0 p-0 text-muted">https://binance-docs.github.io/apidocs/spot/en/#exchange-information</p>
 </div>
 
 <div class="container-fluid mt-3">
-  <dl class="row">
-    <dt class="col-2 text-center">timezone</dt>
-    <dd class="col-10"><%= @exchange_infos[:timezone] %></dd>
-    <dt class="col-2 text-center">serverTime</dt>
-    <dd class="col-10"><%= @exchange_infos[:serverTime] %></dd>
-    <dt class="col-2 text-center">rateLimits</dt>
-    <dd class="col-10">
-      <table class="table table-sm table-striped">
-        <tr>
-          <th class="text-center">rateLimitType</th>
-          <th class="text-center">interval</th>
-          <th class="text-center">intervalNum</th>
-          <th class="text-center">limit</th>
-        </tr>
-        <% @exchange_infos[:rateLimits].each do |rate_limit| %>
-          <tr>
-            <td class="text-center"><%= rate_limit[:rateLimitType] %></td>
-            <td class="text-center"><%= rate_limit[:interval] %></td>
-            <td class="text-end"><%= rate_limit[:intervalNum] %></td>
-            <td class="text-end"><%= rate_limit[:limit] %></td>
-          </tr>
-        <% end %>
-      </table>
-    </dd>
-    <dt class="col-2 text-center">exchangeFilters</dt>
-    <dd class="col-10"><%= @exchange_infos[:exchangeFilters] %></dd>
-  </dl>
+  <% @exchange_infos.fetch(:symbols, {}).first(25).each do |symbol| %>
+    <div class="row">
+      <div class="col-12">
+        <h3><%= symbol[:symbol] %></h3>
+        <h6><%= exchange_info_status(symbol[:status]) %></h6>
+        <p><%= symbol[:baseAsset] %> | <%= symbol[:quoteAsset] %></p>
+      </div>
+      <div class="col-12">
+        <p class="mb-0">
+          <strong>Order Types</strong>
+          <ul>
+            <% symbol[:orderTypes].each do |order_type| %>
+              <li><%= order_type %></li>
+            <% end %>
+          </ul>
+        </p>
+      </div>
+      <div class="col-12">
+        <p class="mb-0">
+          <strong>Permissions</strong>
+          <ul>
+            <% symbol[:permissions].each do |permissions| %>
+              <li><%= permissions %></li>
+            <% end %>
+          </ul>
+        </p>
+      </div>
+      <div class="col-12">
+        <p class="mb-0">
+          <strong>Filters</strong>
+          <ul>
+            <% symbol[:filters].each do |filter| %>
+              <li><%= filter[:filterType] %></li>
+              <ul>
+                <% filter.each do |key, value| %>
+                  <% next if key == :filterType %>
+                  <li><strong><%= key %>: </strong><%= value %></li>
+                <% end %>
+              </ul>
+            <% end %>
+          </ul>
+        </p>
+      </div>
+    </div>
+  <% end %>
 </div>
 
 <div class="container-fluid mt-3">
-  <h3>symbols</h3>
-  <div class="table-responsive">
-    <table class="table table-sm table-info table-striped table-hover">
-      <tr>
-        <th class="text-center">symbol</th>
-        <th class="text-center">status</th>
-        <th class="text-center">baseAsset</th>
-        <th class="text-center">quoteAsset</th>
-        <th class="text-center">orderTypes</th>
-        <th class="text-center">filters</th>
-        <th class="text-center">permissions</th>
-        <th class="text-center">hash keys</th>
-      </tr>
-      <% @exchange_infos[:symbols].first(25).each do |symbol| %>
-        <tr id="<%= symbol[:symbol] %>">
-          <td class="text-center"><%= symbol[:symbol] %></td>
-          <td class="text-center"><%= symbol[:status] %></td>
-          <td class="text-center"><%= symbol[:baseAsset] %></td>
-          <td class="text-center"><%= symbol[:quoteAsset] %></td>
-          <td class="text-center">
-            <% symbol[:orderTypes].each do |order_type| %>
-              <%= order_type %><br/>
-            <% end %>
-          </td>
-          <td>
-            <% symbol[:filters].each do |filter| %>
-              <%= filter %><br/>
-            <% end %>
-          </td>
-          <td class="text-center">
-            <% symbol[:permissions].each do |permission| %>
-              <%= permission %><br/>
-            <% end %>
-          </td>
-          <td>
-            <% symbol.keys.each do |key| %>
-              <%= key %><br/>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-    </table>
+  <div class="row">
+    <div class="col-12">
+      <h4 class="mt-3">Rate Limits</h4>
+    </div>
   </div>
+  <div class="row">
+    <% @exchange_infos.fetch(:rateLimits, {}).each do |rate_limit| %>
+      <div class="col-md-2">
+        <div class="card m-1">
+          <div class="card-header text-center">
+            <h5 class="card-title"><%= rate_limit[:rateLimitType] %></h5>
+          </div>
+          <div class="card-body">
+            <p class="card-text m-0">
+              <strong>interval: </strong><%= rate_limit[:interval] %>
+            </p>
+            <p class="card-text m-0">
+              <strong>intervalNum: </strong><%= rate_limit[:intervalNum] %>
+            </p>
+            <p class="card-text m-0">
+              <strong>limit: </strong><%= rate_limit[:limit] %>
+            </p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+<div class="container-fluid mt-3">
+  <h4 class="mt-3">All Exchange Info</h4>
+  <% @exchange_infos.each do |key, value| %>
+    <div class="card my-1">
+      <div class="card-header">
+        <h5 class="card-title"><%= key %></h5>
+      </div>
+      <div class="card-body">
+        <p class="card-text"><%= value.inspect %></p>
+      </div>
+    </div>
+  <% end %>
 </div>
